<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translate="false">AntennaPod</string>
    <string name="discover_page_header" translate="false">Discovery</string>
    <string name="discover_page_button_categories" translate="false">Categories</string>
    <string name="discover_page_button_new" translate="false">New</string>
    <string name="discover_page_button_recently_played" translate="false">Recently Played</string>
    <string name="discover_page_button_top10" translate="false">Top 10</string>

    <string name="feeling_lucky_Im_feeling_lucky" translate="false">I\'m Feeling Lucky</string>
    <string name="feeling_lucky_find_itunes" translate="false">Find in iTunes</string>
    <string name="feeling_lucky_reroll" translate="false">Re-roll</string>
    <string name="feeling_lucky_podcast_title" translate="false">Podcast Title</string>
    <string name="feeling_lucky_podcast_author" translate="false">Podcast Author</string>
    <string name="feeling_lucky_description" translate="false">Podcast Description</string>
    <string name="feeling_lucky_podcast_thumbnail" translate="false">Podcast Thumbnail</string>
    <string name="gpodnet_categories" translate="false">Gpodnet Categories</string>
    <string name="discover_page_search" translate="false">Search</string>
    <string name="itunes_categories" translate="false">iTunes Categories</string>
    <string name="itunes_podcast" translate="false">iTunes Podcast</string>
    <string name="categories" translate="false">Categories</string>

    <string name="add_to_favorites_podcasts">Add to favorites Podcasts</string>

    <string name="register_and_login" translate="false">Register and Login</string>
    <string name="register_and_login_footer" translate="false">You can save and sync your subscription and history on all your devices</string>
    <string name="register" translate="false">Register</string>
    <string name="login" translate="false">Login</string>
    <string name="authentication" translatable="false"> Authentication </string>

    <string name="registerButton" translate="false">Sign Up</string>
    <string name="alreadHaveAccount" translate="false">Already have an account? Login</string>
    <string name="loginButton" translate="false">Login</string>
    <string name="DontHaveAccount" translate="false">Don\'t have an account? Sign Up</string>
    <string name="fullName" translate="false">FULL NAME</string>
    <string name="emailaddress" translate="false">EMAIL ADDRESS</string>
    <string name="password" translate="false">PASSWORD</string>
    <string name="logout_button" translate="false">Logout</string>

    <string name="minimum_password" translate="false">The password is too short</string>
    <string name="auth_failed" translate="false">Wrong Password</string>

    <string name="forgot_password" translatable="false">Forgot Password?</string>
    <string name="forgot_password_msg" translatable="false">Please enter your registered email, in order to send you the password reset instructions</string>
    <string name="hint_email" translatable="false">Email</string>
    <string name="btn_reset_password" translatable="false">Reset Password</string>
    <string name="btn_back" translatable="false">Back</string>
    <string name="proceed" translatable="false">Proceed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="viewComments">View Comments</string>
    <string name="submit">submit</string>

    <string name="title_activity_register_and_login">Authentication</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_forgot_password">Reset Password</string>
    <string name="title_activity_register" translatable="false"> Register </string>

    <string name="require_fulll_name" translatable="false">Full Name is required!</string>
    <string name="require_new_name" translatable="false">Cannot update to the same current name</string>
    <string name="email_bad_format" translatable="false">Wrong email format!. Your email should contain "@"</string>
    <string name="require_email" translatable="false">Enter email address!</string>
    <string name="require_password" translatable="false">Enter password!</string>
    <string name="warn_short_password" translatable="false">Password too short, enter minimum 6 characters!</string>
    <string name="email_already_exists" translatable="false">User with this email already exists</string>
    <string name="register_success" translatable="false">Account registered correctly. Please check your email for verification.</string>
    <string name="register_fail" translatable="false">Error registration failed.</string>
    <string name="login_sucess" translatable="false">Successful Login</string>
    <string name="login_unverified" translatable="false">Please Verify your Email Address</string>
    <string name="reset_password_success" translatable="false">We have sent you instructions to reset your password!</string>
    <string name="reset_password_fail" translatable="false">Failed to send reset email!</string>
    <string name="add_your_comment" translatable="false">Add your Comment</string>


</resources>
